# depixelize

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: common.h  graph.h  image.h  spline.h  voronoi.h
src/: BMP.h  common.cpp  common.h  graph.cpp  graph.h  image.cpp  image.h  main.cpp  main.x.cpp  simple-svg.hpp  spline.cpp  spline.h  svg.x.cpp  voronoi.cpp  voronoi.h
